grammar.js
    program: $ => seq(
      optional($.hash_bang_line),
      repeat($.statement),
    ),

    //
    // Markup entry point
    //
    // A .uc.tmpl document is a flat sequence of markup nodes: raw
    // text, comment tags, expression tags, statement tags, and the
    // alt-syntax constructs that span multiple tags.
    //
    // Statement tags that contain only simple (non-spanning) code are
    // wrapped in `statement_tag`.  Alt-syntax constructs that span tag
    // boundaries appear directly as markup nodes with explicit tag-open /
    // tag-close fields, giving a pristine tree with no empty-statement noise.
    //
    _markup_node: $ => choice(
      $.raw_text,
      $.expression_tag,
      $.comment_tag,
      $.statement_tag,
      // Alt-syntax constructs that span tag boundaries:
      $.if_alt_statement,
      $.for_alt_statement,
      $.for_in_alt_statement,
      $.while_alt_statement,
      $.function_alt_declaration,
    ),

    // -----------------------------------------------------------------------
    // Simple tag wrappers
    // -----------------------------------------------------------------------

    // A statement_tag wraps non-spanning code: {% stmt; stmt; %}
    expression_statement: $ => seq(
      $._expressions,
      $._semicolon,
    ),

    // `let` declarators may omit the initializer; `const` requires one.
    // ucode rejects `const a;` ("Expecting initializer expression").
    lexical_declaration: $ => choice(
      seq(
        field('kind', 'let'),
        commaSep1($.variable_declarator),
        $._semicolon,
      ),
      seq(
        field('kind', 'const'),
        commaSep1(alias($._const_declarator, $.variable_declarator)),
        $._semicolon,
      ),
    ),

    // Initializer declaration for a C-style for-header. Differs from
    // lexical_declaration in two ucode-faithful ways:
    //   - no trailing `$._semicolon`: the for-header supplies its own literal
    //     `;`, and ucode does NOT insert a semicolon there
    //     (`for (let i = 0⏎i < 3; …)` is an error), and
    //   - `let` only: ucode rejects `const` in a for-header initializer
    //     (`for (const …)` → "Expecting expression"), just as it does for the
    //     for-in target.
    // Aliased back to lexical_declaration in the for-header so the tree node
    // name is unchanged.
    variable_declarator: $ => seq(
      field('name', $.identifier),
      optional($._initializer),
    ),

    _const_declarator: $ => seq(
      field('name', $.identifier),
      $._initializer,
    ),

    statement_block: $ => prec.right(seq(
      '{',
      repeat($.statement),
      '}',
      optional($._automatic_semicolon),
    )),

    // An unbraced control-flow body accepts any statement except a lexical
    // declaration: ucode rejects `if (x) let y = 1;` / `while (c) const z = 1;`
    // ("Expecting expression") but accepts expression statements, `function`
    // declarations and blocks. (The `:`…`endif` alt-syntax body, which is
    // block-like, still allows `let`/`const` and uses `statement` directly.)
    // Mirror `statement` minus `lexical_declaration` — and minus import/export,
    // which ucode allows only at a module's top level (`if (1) import "m";`
    // also errors with "Expecting expression").
    _unbraced_statement: $ => choice(
      $.expression_statement,
      $.function_declaration,
      $.statement_block,

      $.if_statement,
      $.if_alt_statement,
      $.switch_statement,
      $.for_statement,
      $.for_alt_statement,
      $.for_in_statement,
      $.for_in_alt_statement,
      $.while_statement,
      $.while_alt_statement,
      $.try_statement,

      $.break_statement,
      $.continue_statement,
      $.return_statement,
      $.empty_statement,
    ),

    else_clause: $ => seq('else', $._unbraced_statement),

    // Standard brace-based if
    if_statement: $ => prec.right(seq(
      'if',
      field('condition', $.parenthesized_expression),
      field('consequence', $._unbraced_statement),
      optional(field('alternative', $.else_clause)),
    )),

    // Alternative colon/endif syntax — two forms:
    //   code form:   if (cond): stmts … endif        (used in program / statement_tag)
    //   markup form: {% if (cond): %} … {% endif %}   (spans tag boundaries in markup)
    //
    // The markup form uses a flat content repeat (_if_markup_node) rather than
    // nested elif/else bodies.  elif_clause_tag and else_alt_clause_tag are pure
    // header tags that appear as regular items inside that repeat.  This avoids
    // the shift/reduce conflict that arises when a nested repeat($._markup_node)
    // can't decide whether statement_tag_open starts another body node or the
    // enclosing end tag.
    if_alt_statement: $ => choice(
      seq(
        'if',
        field('condition', $.parenthesized_expression),
        ':',
        field('body', repeat($.statement)),
        repeat(field('elif_clause', $.elif_clause)),
        optional(field('else_body', $.else_alt_clause)),
        'endif',
      ),
      seq(
        field('open',    $._stmt_open),
        'if',
        field('condition', $.parenthesized_expression),
        ':',
        repeat($.statement),
        field('close',   $._stmt_close),
        // Ordered clause structure (matches ucode): the if-body, then zero or
        // more elif clauses each with their own body, then an optional single
        // else clause with its body.  This makes `else` before `elif`, a
        // duplicate `else`, and an `elif` after `else` all ERRORs, unlike a
        // flat `repeat(choice(node, elif, else))`.  Bodies stay flat (sibling
        // markup nodes); the elif/else header tags now also carry
        // `elif_clause` / `else_body` fields.
        repeat($._markup_node),
        repeat(seq(field('elif_clause', $.elif_clause_tag), repeat($._markup_node))),
        optional(seq(field('else_body', $.else_alt_clause_tag), repeat($._markup_node))),
        field('end_open',  $._stmt_open),
        'endif',
        field('end_close', $._stmt_close),
      ),
    ),

    // Inline wrappers for tag delimiter tokens.
    // Each groups all variants (plain / trim / lstrip) so grammar rules stay
    // concise while still surfacing distinct node types for highlight queries.
    _stmt_open:  $ => choice($.statement_tag_open, $.statement_tag_trim_open, $.statement_tag_lstrip_open),
    _stmt_close: $ => choice($.statement_tag_close, $.statement_tag_trim_close),
    elif_clause: $ => seq(
      'elif',
      field('condition', $.parenthesized_expression),
      ':',
      field('body', repeat($.statement)),
    ),

    // Markup form of elif: just the header tag; body is sibling _if_markup_nodes
    else_alt_clause: $ => seq(
      'else',
      field('body', repeat($.statement)),
    ),

    // Markup form of else: just the header tag; body is sibling _if_markup_nodes
    switch_statement: $ => seq(
      'switch',
      field('value', $.parenthesized_expression),
      field('body', $.switch_body),
    ),

    for_statement: $ => seq(
      forHeader($),
      field('body', $._unbraced_statement),
    ),

    for_alt_statement: $ => choice(
      seq(
        forHeader($),
        ':',
        field('body', repeat($.statement)),
        'endfor',
      ),
      seq(
        field('open',    $._stmt_open),
        forHeader($),
        ':',
        repeat($.statement),
        field('close',   $._stmt_close),
        field('body',    repeat($._markup_node)),
        field('end_open',  $._stmt_open),
        'endfor',
        field('end_close', $._stmt_close),
      ),
    ),

    for_in_statement: $ => seq(
      'for',
      $._for_header,
      field('body', $._unbraced_statement),
    ),

    for_in_alt_statement: $ => choice(
      seq(
        'for',
        $._for_header,
        ':',
        field('body', repeat($.statement)),
        'endfor',
      ),
      seq(
        field('open',    $._stmt_open),
        'for',
        $._for_header,
        ':',
        repeat($.statement),
        field('close',   $._stmt_close),
        field('body',    repeat($._markup_node)),
        field('end_open',  $._stmt_open),
        'endfor',
        field('end_close', $._stmt_close),
      ),
      // Compact double-nested form: {% for (outer): for (inner): %} body {% endfor; endfor %}
      // Both iterables contribute `right` fields; both loop vars contribute `left` fields.
      seq(
        field('open',    $._stmt_open),
        'for',
        $._for_header,
        ':',
        'for',
        $._for_header,
        ':',
        field('close',   $._stmt_close),
        field('body',    repeat($._markup_node)),
        field('end_open',  $._stmt_open),
        'endfor', ';', 'endfor',
        field('end_close', $._stmt_close),
      ),
    ),

    // Supports both `for (k in obj)` and `for (k, v in obj)` (ucode two-variable form).
    // The loop target must be a plain identifier: ucode rejects member/subscript
    // targets (`for (a.x in o)`) and only `let` (never `const`) may declare it.
    _for_header: $ => seq(
      '(',
      choice(
        seq(
          field('kind', 'let'),
          field('left', $.identifier),
          optional(seq(',', field('value', $.identifier))),
        ),
        seq(
          field('left', $.identifier),
          optional(seq(',', field('value', $.identifier))),
        ),
      ),
      'in',
      field('right', $._expressions),
      ')',
    ),

    while_statement: $ => seq(
      'while',
      field('condition', $.parenthesized_expression),
      field('body', $._unbraced_statement),
    ),

    while_alt_statement: $ => choice(
      seq(
        'while',
        field('condition', $.parenthesized_expression),
        ':',
        field('body', repeat($.statement)),
        'endwhile',
      ),
      seq(
        field('open',    $._stmt_open),
        'while',
        field('condition', $.parenthesized_expression),
        ':',
        repeat($.statement),
        field('close',   $._stmt_close),
        field('body',    repeat($._markup_node)),
        field('end_open',  $._stmt_open),
        'endwhile',
        field('end_close', $._stmt_close),
      ),
    ),

    // Spanning function alt-syntax: a function whose body is markup between
    // two tags, e.g.  {% function f(a): %} raw {{ a }} {% endfunction %}
    // (the within-tag form `function f(): stmts endfunction` is handled by
    // function_declaration's body).
    break_statement: $ => seq(
      'break',
      $._semicolon,
    ),

    switch_body: $ => seq(
      '{',
      repeat(choice($.switch_case, $.switch_default)),
      '}',
    ),

    switch_case: $ => seq(
      'case',
      field('value', $._expressions),
      ':',
      field('body', repeat($.statement)),
    ),

    switch_default: $ => seq(
      'default',
      ':',
      field('body', repeat($.statement)),
    ),

    parenthesized_expression: $ => seq(
      '(',
      $._expressions,
      ')',
    ),

    //
    // Expressions
    //

    _expressions: $ => choice(
      $.expression,
      $.sequence_expression,
    ),

    object: $ => prec('object', seq(
      '{',
      optional(seq(
        commaSep1(choice(
          $.pair,
          $.spread_element,
          alias(
            choice($.identifier, $._reserved_identifier),
            $.shorthand_property_identifier,
          ),
        )),
        optional(','),
      )),
      '}',
    )),

    // ucode allows a trailing comma but NOT interior elision (`[1,,2]`).
    array: $ => seq(
      '[',
      optional(seq(
        commaSep1(choice(
          $.expression,
          $.spread_element,
        )),
        optional(','),
      )),
      ']',
    ),

    optional_chain: _ => '?.',

    call_expression: $ => choice(
      prec('call', seq(
        field('function', $.expression),
        field('arguments', $.arguments),
      )),
      prec('member', seq(
        field('function', $.primary_expression),
        field('optional_chain', $.optional_chain),
        field('arguments', $.arguments),
      )),
    ),

    member_expression: $ => prec('member', seq(
      field('object', choice($.expression, $.primary_expression)),
      choice('.', field('optional_chain', $.optional_chain)),
      field('property', reserved('properties', alias($.identifier, $.property_identifier))),
    )),

    subscript_expression: $ => prec.right('member', seq(
      field('object', choice($.expression, $.primary_expression)),
      optional(field('optional_chain', $.optional_chain)),
      '[', field('index', $._expressions), ']',
    )),

    // Assignment targets. ucode rejects a parenthesized whole target
    // (`(a) = 1` is "Unexpected token"), so the left-hand side is a plain
    // reference. (An optional chain anywhere in the target — `a?.b = 1` — is
    // also rejected by ucode, but that is a semantic lval check the grammar
    // does not attempt; member/subscript here still permit `?.`.)
    _lhs_expression: $ => choice(
      $.member_expression,
      $.subscript_expression,
      $._identifier,
      alias($._reserved_identifier, $.identifier),
    ),

    _initializer: $ => seq(
      '=',
      field('value', $.expression),
    ),

    spread_element: $ => seq('...', $.expression),

    ternary_expression: $ => prec.right('ternary', seq(
      field('condition', $.expression),
      alias($._ternary_qmark, '?'),
      field('consequence', $.expression),
      ':',
      field('alternative', $.expression),
    )),

    binary_expression: $ => choice(
      ...[
        ['&&', 'logical_and'],
        ['||', 'logical_or'],
        ['>>', 'binary_shift'],
        ['<<', 'binary_shift'],
        ['&', 'bitwise_and'],
        ['^', 'bitwise_xor'],
        ['|', 'bitwise_or'],
        ['+', 'binary_plus'],
        ['-', 'binary_plus'],
        ['*', 'binary_times'],
        ['/', 'binary_times'],
        ['%', 'binary_times'],
        ['**', 'binary_exp'],  // left-associative in ucode: 4**3**2 == (4**3)**2
        ['<', 'binary_relation'],
        ['<=', 'binary_relation'],
        ['==', 'binary_equality'],
        ['===', 'binary_equality'],
        ['!=', 'binary_equality'],
        ['!==', 'binary_equality'],
        ['>=', 'binary_relation'],
        ['>', 'binary_relation'],
        ['??', 'logical_or'],    // same level as ||, freely mixable
        ['in', 'binary_relation'],
      ].map(([operator, precedence, associativity]) =>
        (associativity === 'right' ? prec.right : prec.left)(precedence, seq(
          field('left', $.expression),
          field('operator', operator),
          field('right', $.expression),
        )),
      ),
    ),

    unary_expression: $ => prec.left('unary_void', seq(
      field('operator', choice('!', '~', '-', '+')),
      field('argument', $.expression),
    )),

    // ucode's `delete` accepts a property access (member or subscript), or a
    // parenthesized one: `delete o.k`, `delete o["k"]`, `delete (o.k)`. Unlike
    // an assignment/update target, an optional chain IS allowed (`delete a?.b`).
    // `delete x` and `delete (5)` are rejected by ucode at compile time, but
    // the parenthesized-non-property case is a semantic lval check the grammar
    // does not attempt (mirroring how tree-sitter-javascript treats `delete`).
    update_expression: $ => prec.left('update', choice(
      seq(
        field('argument', $._lhs_expression),
        field('operator', choice('++', '--')),
      ),
      seq(
        field('operator', choice('++', '--')),
        field('argument', $._lhs_expression),
      ),
    )),

    sequence_expression: $ => prec.right(commaSep1($.expression)),

    //
    // Functions
    //

    function_expression: $ => prec('literal', seq(
      'function',
      field('name', optional($.identifier)),
      $._call_signature,
      field('body', $.statement_block),
    )),

    // Function declaration — brace body or alternative colon/endfunction syntax
